--- a/style.css
+++ b/style.css
@@ -6,6 +6,17 @@
     scroll-behavior: smooth;
 }
 
+/* Hide scrollbar for Chrome, Safari and Opera */
+*::-webkit-scrollbar {
+    display: none;
+  }
+  
+  /* Hide scrollbar for IE, Edge and Firefox */
+*{
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+  }
+
 header{
     background-color: black;
     position: fixed;
@@ -206,4 +217,18 @@ header{
 
 .workingSecImage img{
     height: 80vh;
+}
+
+.emailSubmit{
+    height: 88vh;
+    display: flex;
+}
+
+.emailSubmit .emailSubmitLeft{
+    width: 50vw;
+    background-color: #F54C71;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
