third section done

--- a/style.css
+++ b/style.css
@@ -228,7 +228,76 @@ header{
     width: 50vw;
     background-color: #F54C71;
     display: flex;
-    justify-content: center;
-    align-items: center;
     flex-direction: column;
+}
+
+.emailSubmit .emailSubmitLeft h1{
+    font-size: 10vh;
+    font-weight: 700;
+    width: 40vw;
+    margin: 7vh 0 0 5vw;
+    color: white;
+}
+
+.emailSubmit .emailSubmitLeft p{
+    width: 40vw;
+    margin: 10vh 0 0 5vw;
+    font-size: 1.2vw;
+    font-weight: 400;
+    color: white;
+}
+
+.emailSubmit .emailSubmitLeft .accentText{
+    color: #F2C747;
+}
+
+.emailSubmit .emailSubmitRight{
+    width: 50vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.emailSubmit .emailSubmitRight .ear{
+    display: flex;
+    width: 40vw;
+    height: 40vh;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 10vh
+}
+
+
+.emailSubmit .emailSubmitRight div h1{
+    width: 20vw;
+    font-size: 6vh;
+}
+
+.emailSubmit .emailSubmitRight .emailSubmitForm{
+    width: 40vw;
+    margin-top: 15vh;
+    display: flex;
+    align-items: center;
+}
+
+.emailSubmit .emailSubmitRight .emailSubmitForm input{
+    width: 36vw;
+    height: 7vh;
+    border: 1px solid #000;
+    border-radius: 100px 0 0 100px;
+    padding: 20px;
+    color: #000;
+    font-size: 1.5vw;
+    font-weight: 400;
+}
+
+.emailSubmit .emailSubmitRight .emailSubmitForm button{
+    width: 7vh;
+    height: 7vh;
+    border: 1px solid #000;
+    border-radius: 0 100px 100px 0;
+    font-size: 5vh;
+    color: #F54C71;
+    background-color: #000;
+    cursor: pointer;
 }
