--- a/style.css
+++ b/style.css
@@ -397,7 +397,6 @@ header{
     position: absolute;
     bottom: 0;
     left: 23vw;
-    background-color: ;
     font-size: 2vw;
     font-weight: 700;
 }
@@ -415,6 +414,9 @@ header{
     background-color: #000;
     padding: 5vh 5vw;
     color: white;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .footer .contactUs{
@@ -466,4 +468,31 @@ header{
 
 .footer .contactUs button i{
     transform: translate(0.3vw, 0.2vh);
+}
+
+.footer .socialLinks{
+    height: 45vh;
+    margin: 10vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    text-align: center;
+}
+
+.footer .socialLinks .footerlogo{
+    height: 9vh;
+    margin-bottom: 5vh;
+}
+
+.footer .socialLinks div p{
+    font-size: 2vh;
+    font-weight: 400;
+    margin-top: 2vh;
+}
+
+.footer .socialLinks div img{
+    width: 2vw;
+    margin: 0 1vw;
+    cursor: pointer;
 }
