--- a/style.css
+++ b/style.css
@@ -472,7 +472,7 @@ header{
 
 .footer .socialLinks{
     height: 45vh;
-    margin: 10vh;
+    margin: 10vh 0;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
