--- a/style.css
+++ b/style.css
@@ -554,7 +554,37 @@ header{
     .navbar ul .MOBmenu, .navbar ul .MOBmenu .navCTA{
         display: block;
     }
-    
+
+    .MOBmenu{
+        position: relative;
+    }
+
+    .navbar ul .MOBmenu div{
+        position: absolute;
+        bottom: -21.5vh;
+        right: 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        height: 20vh;
+        width: 50vw;
+        padding: 2vh 2vw;
+        backdrop-filter: blur(16px) saturate(180%);
+        -webkit-backdrop-filter: blur(16px) saturate(180%);
+        background-color: rgba(0, 0, 0, 0.75);
+        border-radius: 12px;
+        border: 1px solid rgba(255, 255, 255, 0.125);
+    }
+
+    .navbarOpen{
+        display: block;
+    }
+
+    .navbarClose{
+        display: none !important;
+    }
+
     .navbar .logo img{
         height: 8vh;
     }
