faq section js added

--- a/style.css
+++ b/style.css
@@ -891,7 +891,7 @@ header{
     margin: 3vh auto;
 }
 
-.faqMobile .mobfaqs .queClicked{
+.faqMobile .queClicked .mobFaqAns{
     display: block;
 }
 
