--- a/style.css
+++ b/style.css
@@ -267,7 +267,7 @@ header{
 }
 
 .emailSubmit .emailSubmitLeft p{
-    width: 40vw;
+    width: 30vw;
     margin: 10vh 0 0 5vw;
     font-size: 1.2vw;
     font-weight: 400;
@@ -300,7 +300,7 @@ header{
 .emailSubmit .emailSubmitRight .ear{
     display: flex;
     width: 40vw;
-    height: 40vh;
+    height: 30vh;
     justify-content: space-between;
     align-items: center;
     margin-top: 10vh
@@ -316,27 +316,29 @@ header{
     width: 40vw;
     margin-top: 15vh;
     display: flex;
-    align-items: center;
+    align-items: flex-start;
+    flex-direction: column;
 }
 
 .emailSubmit .emailSubmitRight .emailSubmitForm input{
     width: 36vw;
     height: 7vh;
     border: 1px solid #000;
-    border-radius: 100px 0 0 100px;
+    border-radius: 20px 20px 20px 20px;
     padding: 20px;
     color: #000;
     font-size: 1.5vw;
     font-weight: 400;
+    margin-bottom: 2vh;
 }
 
 .emailSubmit .emailSubmitRight .emailSubmitForm button{
-    width: 7vh;
+    width: 10vw;
     height: 7vh;
     border: 1px solid #000;
-    border-radius: 0 100px 100px 0;
-    font-size: 5vh;
-    color: #F54C71;
+    border-radius: 20px 20px 20px 20px;
+    font-size: 3vh;
+    color: #fff;
     background-color: #000;
     cursor: pointer;
 }
@@ -561,15 +563,15 @@ header{
 
     .navbar ul .MOBmenu div{
         position: absolute;
-        bottom: -21.5vh;
+        bottom: -12.7vh;
         right: 0;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
         align-items: center;
-        height: 20vh;
-        width: 50vw;
-        padding: 2vh 2vw;
+        height: 12vh;
+        width: 55vw;
+        padding: 2vh 0;
         backdrop-filter: blur(16px) saturate(180%);
         -webkit-backdrop-filter: blur(16px) saturate(180%);
         background-color: rgba(0, 0, 0, 0.75);
