join waitlist + data changes

--- a/style.css
+++ b/style.css
@@ -343,6 +343,11 @@ header{
     cursor: pointer;
 }
 
+
+.mobEmailSubmitRight{
+    display: none;
+}
+
 .commingSoon{
     height: 88vh;
     display: flex;
@@ -541,7 +546,7 @@ header{
     cursor: pointer;
 }
 
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 426px) {
 
     .navbar{
         padding: 0px 2vh;
@@ -818,7 +823,87 @@ header{
     text-decoration: none;
 }
 
+.mobEmailSubmitRight{
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: white;
+    z-index: 1000;
+    display: none;
+}
 
+.mobWaitlistShow{
+    display: block;
+}
+
+.mobEmailSubmitRight .bx{
+    position: absolute;
+    top: 1vh;
+    right: 3vw;
+    padding: 1vh;
+    background-color: #F2C747;
+    opacity: 0.2;
+    font-size: 3vh;
+    border-radius: 100%;
+    color: #000;
+    cursor: pointer;
+}
+
+.mobEmailSubmitRight .mobEar{
+    display: flex;
+    width: 85vw;
+    justify-content: space-between;
+    align-items: center;
+    margin: auto;
+    margin-top: 6vh;
+}
+
+.mobEmailSubmitRight .mobEar h1{
+    width: 55vw;
+    font-size: 5.5vh;
+    font-weight: 900;
+}
+
+.mobEmailSubmitRight .mobEar img{
+    width: 22vw;
+
+}
+
+.mobEmailSubmitRight P{
+    width: 85vw;
+    margin: auto;
+    margin-top: 5vh;
+    font-weight: 500;
+}
+
+.mobEmailSubmitRight .mobEmailSubmitForm{
+    display: flex;
+    flex-direction: column;
+    width: 85vw;
+    margin: auto;
+}
+
+.mobEmailSubmitRight .mobEmailSubmitForm input{
+    margin-top: 5vh;
+    padding: 2vh;
+    border-radius: 10vh;
+    font-weight: 700;
+    font-size: 2vh;
+    color: #5A5A5A;
+} 
+
+.mobEmailSubmitRight .mobEmailSubmitForm button{
+    margin-top: 5vh;
+    padding: 2vh;
+    width: 40vw;
+    font-size: 3vh;
+    font-weight: 700;
+    color: #fff;
+    background-color: #000;
+    border-radius: 100vh;
+}
 
 .commingSoon{
     height: 88vh;
