--- a/style.css
+++ b/style.css
@@ -280,6 +280,7 @@ header{
     text-decoration: underline;
     font-size: 3vh;
     font-weight: 600;
+    color: #000;
 }
 
 .EmailMobileCTA{
@@ -802,6 +803,7 @@ header{
     width: 80vw;
     margin: 3vh 10vw;
     font-size: 2.2vh;
+    color: #000;
 }
 
 .EmailMobileCTA {
